turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:7: error: not found: value i
 while(getCouleurSol()!=colors(i)){
                               ^Turmite:8: error: not found: value i
							i+=1
                                                        ^Turmite:10: error: not found: value i
setCouleurBrosse(i+1);
                 ^